--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,7 @@
 {
   "lock": false,
   "tasks": {
-    "check": "deno cache --check=all src/mod.ts",
+    "check": "deno cache --check=all mod.ts",
     "test": "deno test test",
     "dev": "deno fmt && deno lint && deno task test && deno task check",
     "coverage": "deno task test --coverage=test/cov_profile && deno coverage --lcov --output=coverage.lcov test/cov_profile",
